
	* Add support for solving root(a, x)=b (requires rational value for ln(a)/ln(b))
	* Use parentheses for exponent using scientific notation (with power of 10)
	* Add checkAvailableVersion() variant returning package URL

2024-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add multiples() function (returns multiples of a number within specified range)

2024-04-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add powertower() function
	* Add recursive depth limit to avoid running out of stack memory (causing segfault)

2024-03-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Solve equations containing if() function
	* Fix awg(x)=... and awgd(x)=... when default assumption type is not real and fix solve() with these equations

2024-03-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support integer factorization of integers in matrix/vector, and of numerator and denominator in rational number

2024-03-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix setbits()

2024-03-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not apply "read precision" setting to integer exponents for values with units
	* Change from line to point (or dot) plot style for data with many discontinuous points

2024-03-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Replace special colorize values, for selection of Unicode exponents, with different use_unicode_signs values
	* Use Unicode exponents, in MathStructure::print(), if format is false, even if tagtype is not TAG_TYPE_TERMINAL
	* Fix Unicode exponents with number bases < 10

2024-03-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve parsing of text arguments - fix quotation mark replaced by feet or inches and % replaced by percent variable, remove quotation marks when parts of argument are quoted separately (a "b" "c" = "a b c"), and do not replace quoted curly brackets in expression unless necessary