@@ -854,6 +854,7 @@
       <_title>Multiples</_title>
       <_names>r:multiples</_names>
       <_description>Returns all multiples of a value in the specified range.</_description>
+      <example>$name(9, 50, 100) = [54  63  72  81  90  99]</example>
       <expression>if(ceil(\y/abs(\x))&gt;floor(\z/abs(\x)),[],genvector("i"*abs(\x),ceil(\y/abs(\x)),floor(\z/abs(\x)),1,"i",1))</expression>
       <condition>\y&lt;=\z</condition>
       <argument type="number" index="1">
